--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,7 +251,7 @@ em, i { font-style: italic; }
 
 .post h2 {
 		margin-bottom: 0.6rem;
-	  font: 300 24px/1.5 "Helvetica Neue",Helvetica,Arial,sans-serif;
+	  font: 600 24px/1.5 "Open Sans", "Helvetica Neue",Helvetica,Arial,sans-serif;
 	  color: #111;
 	  margin-top: 2rem;
 }
